--- a/index.html
+++ b/index.html
@@ -43,26 +43,30 @@
   <!-- NAVIGATION BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-md-3" href="#"><img class="navlogo" src="resources/images/FullLogo.png" alt="TechGeckoFullLogo"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
-    <div class="navbar-nav text-center align-items-center">
-      <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
-      <a class="nav-item nav-link mr-0 mr-md-3" href="/resources/packages">OFFERS</a>
-      <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
-      <button class="blob-btn d-none d-md-block" href="/resources/contact">
-        CONTACT
-        <span class="blob-btn__inner">
-          <span class="blob-btn__blobs">
-            <span class="blob-btn__blob"></span>
-            <span class="blob-btn__blob"></span>
-            <span class="blob-btn__blob"></span>
-            <span class="blob-btn__blob"></span>
+  <div class="container">
+    <a class="navbar-brand ml-md-3" href="#"><img class="navlogo" src="resources/images/FullLogo.png" alt="TechGeckoFullLogo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
+      <div class="navbar-nav text-center align-items-center">
+        <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
+        <a class="nav-item nav-link mr-0 mr-md-3" href="/resources/packages">PACKAGES</a>
+        <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
+        <a href="/resources/contact">
+        <button class="blob-btn d-none d-md-block" href="/resources/contact">
+          CONTACT
+          <span class="blob-btn__inner">
+            <span class="blob-btn__blobs">
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+            </span>
           </span>
-        </span>
-      </button>
+        </button>
+        </a>
+    </div>
   </div>
 </nav>
   
@@ -95,7 +99,8 @@
             <h2 class="mb-4">We are a small <span class="textcolor">website developing</span> company based in Newcastle Upon Tyne, focused on <span class="textcolor">affordable</span>, <span class="textcolor">responsive</span> and <span class="textcolor">modern</span> websites that look great on all devices.</h2>
           </div>
           <div class="w-100 d-flex justify-content-center">
-              <button class="blob-btn m-auto d-flex align-items-center" href="/resources/aboutus">
+            <a href="/resources/aboutus">
+              <button class="blob-btn m-auto d-flex align-items-center">
               READ MORE <i class="fas fa-chevron-right ml-2"></i>
               <span class="blob-btn__inner">
                 <span class="blob-btn__blobs">
@@ -106,6 +111,7 @@
                 </span>
               </span>
             </button>
+            </a>
           </div>
         </div>
       </div>
@@ -173,7 +179,19 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages">
+            <button class="blob-btn m-auto d-flex align-items-center">
+              EXPLORE<i class="fas fa-chevron-right ml-2"></i>
+              <span class="blob-btn__inner">
+                <span class="blob-btn__blobs">
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                </span>
+              </span>
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -201,7 +219,19 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages">
+            <button class="blob-btn m-auto d-flex align-items-center">
+              EXPLORE<i class="fas fa-chevron-right ml-2"></i>
+              <span class="blob-btn__inner">
+                <span class="blob-btn__blobs">
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                </span>
+              </span>
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -230,7 +260,19 @@
           </div>
         </div>
         <div>
-          <a class="btn-primary" href="/resources/packages">EXPLORE<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/packages">
+            <button class="blob-btn m-auto d-flex align-items-center">
+              EXPLORE<i class="fas fa-chevron-right ml-2"></i>
+              <span class="blob-btn__inner">
+                <span class="blob-btn__blobs">
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                </span>
+              </span>
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -244,7 +286,19 @@
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
-          <a class="btn-primary" href="/resources/contact">GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i></a>
+          <a href="/resources/contact">
+            <button class="blob-btn m-auto d-flex align-items-center">
+              GET IN CONTACT<i class="fas fa-chevron-right ml-2"></i>
+              <span class="blob-btn__inner">
+                <span class="blob-btn__blobs">
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                </span>
+              </span>
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -256,6 +310,9 @@
 </footer>
 
 </body>
+
+
+<!-- SVG FOR BUTTON ANIMATION -->
 
 <svg class="d-none" xmlns="http://www.w3.org/2000/svg" version="1.1">
   <defs>
