--- a/resources/contact.html
+++ b/resources/contact.html
@@ -50,9 +50,21 @@
   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
     <div class="navbar-nav text-center align-items-center">
       <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
-      <a class="nav-item nav-link" href="/resources/packages">OFFERS</a>
+      <a class="nav-item nav-link mr-0 mr-md-3" href="/resources/packages">PACKAGES</a>
       <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
-      <a class="nav-item nav-link contactbtn sudoh6 d-none d-lg-block mx-3" href="#">CONTACT</a>
+      <a href="/resources/contact">
+        <button class="blob-btn d-none d-md-block" href="/resources/contact">
+          CONTACT
+          <span class="blob-btn__inner">
+            <span class="blob-btn__blobs">
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+              <span class="blob-btn__blob"></span>
+            </span>
+          </span>
+        </button>
+        </a>
     </div>
   </div>
 </nav>
@@ -96,7 +108,17 @@
                         <div class="form-group">
                           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Describe your business"></textarea>
                         </div>
-                        <button id="button" type="submit" class="btn-primary">SUBMIT<i class="fas fa-chevron-right ml-2"></i></button>
+                        <button class="blob-btn d-flex align-items-center">
+                          SUBMIT<i class="fas fa-chevron-right ml-2"></i>
+                          <span class="blob-btn__inner">
+                            <span class="blob-btn__blobs">
+                              <span class="blob-btn__blob"></span>
+                              <span class="blob-btn__blob"></span>
+                              <span class="blob-btn__blob"></span>
+                              <span class="blob-btn__blob"></span>
+                            </span>
+                          </span>
+                        </button>
                       </form>
                     </div>
                   </div>
@@ -114,3 +136,15 @@
 </footer>
 
 </body>
+
+<!-- SVG FOR BUTTON ANIMATION -->
+
+<svg class="d-none" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <defs>
+    <filter id="goo">
+      <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
+      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7" result="goo"></feColorMatrix>
+      <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
+    </filter>
+  </defs>
+</svg>
