--- a/resources/packages.html
+++ b/resources/packages.html
@@ -42,32 +42,34 @@
 
   <!-- NAVIGATION BAR -->
 
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <a class="navbar-brand ml-3" href="/"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
-    <div class="navbar-nav text-center align-items-center">
-      <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
-      <a class="nav-item nav-link mr-0 mr-md-3" href="/resources/packages">PACKAGES</a>
-      <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
-      <a href="/resources/contact">
-        <button class="blob-btn d-none d-md-block" href="/resources/contact">
-          CONTACT
-          <span class="blob-btn__inner">
-            <span class="blob-btn__blobs">
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-              <span class="blob-btn__blob"></span>
-            </span>
-          </span>
-        </button>
-        </a>
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <div class="container">
+      <a class="navbar-brand ml-3" href="/"><img class="navlogo" src="images/FullLogo.png" alt="TechGeckoFullLogo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
+        <div class="navbar-nav text-center align-items-center">
+          <a class="nav-item nav-link" href="/resources/aboutus">ABOUT US</a>
+          <a class="nav-item nav-link mr-0 mr-md-3" href="/resources/packages">PACKAGES</a>
+          <a class="nav-item nav-link d-lg-none mb-3" href="/resources/contact">CONTACT</a>
+          <a href="/resources/contact">
+            <button class="blob-btn d-none d-md-block" href="/resources/contact">
+              CONTACT
+              <span class="blob-btn__inner">
+                <span class="blob-btn__blobs">
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                  <span class="blob-btn__blob"></span>
+                </span>
+              </span>
+            </button>
+            </a>
+        </div>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
   
 <main class="packagemain py-5">
   <div class="container my-3 my-md-5">
