--- a/resources/packages.html
+++ b/resources/packages.html
@@ -78,73 +78,93 @@
           <h1>Packages</h1>
         </div>
         <div class="col-12 col-md-7 mb-4 text-center text-md-left">            
-            <p>All of our websites are hard coded from scratch, this gives them an advantage over website developing sites such as Wix or Squarespace. 
-              You will have a much larger range of customisation, less chance of bugs, and complete confidence that your site will look great no matter the screen size, from monitors and laptops, down to ipads and phones.</p>
+            <p>All of our websites are hard coded from scratch, this gives them an advantage over website developing sites such as Wix or Squarespace.</p>
+              <p>You will have a much larger range of customisation, less chance of bugs, and complete confidence that your site will look great no matter the screen size, from monitors and laptops, down to ipads and phones.</p>
             <p>Having your website coded manually will also allow us to use all the tricks necessary to help your SEO score. 
               This will allow your site to come up in more searches, ultimately getting you more visitors.</p>
         </div>
         <div class="col-12 col-md-5">
           <img class="w-100" src="images/OffersImg.jpg" alt="WebDesign">
         </div>
-        <div class="col-12 row packagediv p-4 mt-5">
-          <div class="col-12 text-center text-md-left">
-              <h2>Standard Package</h2>           
-          </div>
-          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
-            <div class="d-flex flex-column mb-4 text-center text-md-left">
-              <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
-            </div>  
-            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Max 10 Pages</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> 2 Amends Monthly</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> £20 Upkeep</p>
-          </div>
-          <div class="col-12 col-md-6 text-center text-md-left">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
-          </div>
-        </div>
-        <div class="col-12 row packagediv p-4 my-5">
-          <div class="col-12 text-center text-md-left">
-              <h2>Premium Package</h2>           
-          </div>
-          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
-            <div class="d-flex flex-column mb-4">
-              <h2 class="mr-3">£750</h2><h5><em>or £150 a month, over 6 months</em></h5>
-            </div>  
-            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Max 25 Pages</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> 5 amends Monthly</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> £25 Upkeep</p>
-          </div>
-          <div class="col-12 col-md-6 text-center text-md-left">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
-          </div>
-        </div>
-        <div class="col-12 row packagediv p-4">
-          <div class="col-12 text-center text-md-left">
-              <h2>Bespoke Package</h2>           
-          </div>
-          <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
-            <div class="d-flex flex-column mb-4">
-              <h2 class="mr-3"><span class="textcolor">*</span>£1000</h2><h5><em>or <span class="textcolor">*</span>£200 a month, over 6 months</em></h5>
-            </div>  
-            <p class="col-6 pl-0 pb-2"><i class="far fa-file-alt mr-2"></i> Unlimited Pages</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-clipboard mr-2"></i> Modern Design</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-pencil-alt mr-2"></i> Unlimited Amends</p>
-            <p class="col-6 pl-0 pb-2"><i class="fas fa-coins mr-2"></i> <span class="textcolor">*</span>£35 Upkeep</p>
-          </div>
-          <div class="col-12 col-md-6 text-center text-md-left">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos optio veritatis, asperiores accusantium necessitatibus.<br><br>Tenetur hic facere dolorem quaerat. Cumque distinctio officia iure quod, nemo voluptas neque accusantium libero!</p>
-          </div>
-        </div>
     </div>
-    
-</div>
+  </div>
 </main>
-
 <section>
-
+  <div class="container">
+    <div class="col-12 row packagediv p-4 mt-5">
+      <div class="col-12 text-center text-md-left packageheader">
+          <h2>Standard Package</h2>           
+      </div>
+      <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+        <div class="d-flex flex-column mb-4 text-center text-md-left">
+          <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
+        </div>  
+          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+      </div>
+      <div class="col-12 col-md-6 text-md-left row p-4 packagebullets">
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Max 10 Pages</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Custom Modern Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> 2 Amends Monthly</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Free Favicon Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> One Month Average Completion</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> £20 Upkeep</p>
+      </div>
+    </div>
+  </div>
 </section>
+<section>
+  <div class="container">
+    <div class="col-12 row packagediv p-4 mt-5">
+      <div class="col-12 text-center text-md-left packageheader">
+          <h2>Standard Package</h2>           
+      </div>
+      <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+        <div class="d-flex flex-column mb-4 text-center text-md-left">
+          <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
+        </div>  
+          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+      </div>
+      <div class="col-12 col-md-6 text-md-left row p-4 packagebullets">
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Max 10 Pages</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Custom Modern Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> 2 Amends Monthly</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Free Favicon Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> One Month Average Completion</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> £20 Upkeep</p>
+      </div>
+    </div>
+  </div>
+</section><section>
+  <div class="container">
+    <div class="col-12 row packagediv p-4 mt-5">
+      <div class="col-12 text-center text-md-left packageheader">
+          <h2>Standard Package</h2>           
+      </div>
+      <div class="col-12 row pl-3 d-flex justify-content-center justify-content-md-start col-md-6 text-center text-md-left">
+        <div class="d-flex flex-column mb-4 text-center text-md-left">
+          <h2 class="mr-3">£500</h2><h5><em>or £100 a month, over 6 months</em></h5>
+        </div>  
+          <p class="pr-md-5 pr-0">Our standard package is our most popular. We offer an easy to navigate, modern and simplified design.<br><br>This package is perfect for your cafes, barbers or your own personal handyman business.</p>
+      </div>
+      <div class="col-12 col-md-6 text-md-left row p-4 packagebullets">
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Max 10 Pages</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Custom Modern Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> 2 Amends Monthly</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Looks great On All Devices</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> Free Favicon Design</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> MailChimp Contact Form</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> One Month Average Completion</p>
+        <p class="col-6 pl-0 py-1 d-flex align-items-center"><img class="mr-2" src="images/Logo.png" alt=""> £20 Upkeep</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <footer>
 
