--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 </main>
 
   <!-- WHY CHOOSE US -->
-
   <section class="topmain reveal">
-    <div class="container my-5 reveal">
+      <svg id="wave" class="w-100 d-none d-md-block" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 130" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(232, 240, 241, 1)" offset="0%"></stop><stop stop-color="rgba(213, 232, 234, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,39L34.3,45.5C68.6,52,137,65,206,75.8C274.3,87,343,95,411,97.5C480,100,549,95,617,88.8C685.7,82,754,74,823,60.7C891.4,48,960,30,1029,26C1097.1,22,1166,30,1234,41.2C1302.9,52,1371,65,1440,69.3C1508.6,74,1577,69,1646,67.2C1714.3,65,1783,65,1851,60.7C1920,56,1989,48,2057,52C2125.7,56,2194,74,2263,84.5C2331.4,95,2400,100,2469,99.7C2537.1,100,2606,95,2674,97.5C2742.9,100,2811,108,2880,93.2C2948.6,78,3017,39,3086,23.8C3154.3,9,3223,17,3291,32.5C3360,48,3429,69,3497,80.2C3565.7,91,3634,91,3703,78C3771.4,65,3840,39,3909,23.8C3977.1,9,4046,4,4114,17.3C4182.9,30,4251,61,4320,65C4388.6,69,4457,48,4526,39C4594.3,30,4663,35,4731,34.7C4800,35,4869,30,4903,28.2L4937.1,26L4937.1,130L4902.9,130C4868.6,130,4800,130,4731,130C4662.9,130,4594,130,4526,130C4457.1,130,4389,130,4320,130C4251.4,130,4183,130,4114,130C4045.7,130,3977,130,3909,130C3840,130,3771,130,3703,130C3634.3,130,3566,130,3497,130C3428.6,130,3360,130,3291,130C3222.9,130,3154,130,3086,130C3017.1,130,2949,130,2880,130C2811.4,130,2743,130,2674,130C2605.7,130,2537,130,2469,130C2400,130,2331,130,2263,130C2194.3,130,2126,130,2057,130C1988.6,130,1920,130,1851,130C1782.9,130,1714,130,1646,130C1577.1,130,1509,130,1440,130C1371.4,130,1303,130,1234,130C1165.7,130,1097,130,1029,130C960,130,891,130,823,130C754.3,130,686,130,617,130C548.6,130,480,130,411,130C342.9,130,274,130,206,130C137.1,130,69,130,34,130L0,130Z"></path></svg>
+    <div class="container my-5 mb-md-1 mt-md-4 reveal">
       <div class="row m-0">
-        <div class="col-12 p-0 py-5 p-md-5 row mt-1 text-center text-md-left">
+        <div class="col-12 py-5 px-md-5 py-md-0 row mt-1 text-center text-md-left">
           <h2 class="col-12 mb-4">Why Choose Us?</h2>
           <div class="col-12 col-md-6 mb-2 mt-3 mt-3">
             <h4><strong><i class="fas fa-sack-dollar"></i> Affordable</strong></h4>
@@ -147,6 +147,7 @@
         </div>
       </div>
     </div>
+    <svg id="wave" class="w-100 d-none d-md-block"  style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 160" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(213, 232, 234, 1)" offset="0%"></stop><stop stop-color="rgba(232, 240, 241, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,32L80,34.7C160,37,320,43,480,56C640,69,800,91,960,93.3C1120,96,1280,80,1440,64C1600,48,1760,32,1920,21.3C2080,11,2240,5,2400,8C2560,11,2720,21,2880,40C3040,59,3200,85,3360,88C3520,91,3680,69,3840,72C4000,75,4160,101,4320,109.3C4480,117,4640,107,4800,109.3C4960,112,5120,128,5280,128C5440,128,5600,112,5760,96C5920,80,6080,64,6240,69.3C6400,75,6560,101,6720,109.3C6880,117,7040,107,7200,85.3C7360,64,7520,32,7680,32C7840,32,8000,64,8160,72C8320,80,8480,64,8640,50.7C8800,37,8960,27,9120,42.7C9280,59,9440,101,9600,109.3C9760,117,9920,91,10080,66.7C10240,43,10400,21,10560,21.3C10720,21,10880,43,11040,66.7C11200,91,11360,117,11440,130.7L11520,144L11520,160L11440,160C11360,160,11200,160,11040,160C10880,160,10720,160,10560,160C10400,160,10240,160,10080,160C9920,160,9760,160,9600,160C9440,160,9280,160,9120,160C8960,160,8800,160,8640,160C8480,160,8320,160,8160,160C8000,160,7840,160,7680,160C7520,160,7360,160,7200,160C7040,160,6880,160,6720,160C6560,160,6400,160,6240,160C6080,160,5920,160,5760,160C5600,160,5440,160,5280,160C5120,160,4960,160,4800,160C4640,160,4480,160,4320,160C4160,160,4000,160,3840,160C3680,160,3520,160,3360,160C3200,160,3040,160,2880,160C2720,160,2560,160,2400,160C2240,160,2080,160,1920,160C1760,160,1600,160,1440,160C1280,160,1120,160,960,160C800,160,640,160,480,160C320,160,160,160,80,160L0,160Z"></path></svg>
   </section>
 
     <!-- OUR PACKAGES -->
@@ -169,13 +170,13 @@
             <p><i class="far fa-file-alt mr-2"></i>Max 10 Pages</p>
           </div>
           <div class="col-12">
-            <p><i class="fas fa-clipboard mr-2"></i>Modern Design</p>
+            <p><i class="fas fa-clipboard mr-2"></i>Custom Modern Design</p>
           </div>
           <div class="col-12">
             <p><i class="fas fa-pencil-alt mr-2"></i>2 Amends Monthly</p>
           </div>
           <div class="col-12">
-            <p><i class="fas fa-coins mr-2"></i>£20 Monthly Upkeep</p>
+            <p>...and more</p>
           </div>
         </div>
         <div>
@@ -209,13 +210,13 @@
             <p><i class="far fa-file-alt mr-2"></i>Max 25 Pages</p>
           </div>
           <div class="col-12">
-            <p><i class="fas fa-clipboard mr-2"></i>Modern Design</p>
+            <p><i class="fas fa-clipboard mr-2"></i>Custom Modern Design</p>
           </div>
           <div class="col-12">
             <p><i class="fas fa-pencil-alt mr-2"></i>5 Amends Monthly</p>
           </div>
           <div class="col-12">
-            <p><i class="fas fa-coins mr-2"></i>£25 Monthly Upkeep</p>
+            <p>...and more</p>
           </div>
         </div>
         <div>
@@ -240,7 +241,7 @@
         <div>
           <h3><strong>Bespoke Package</strong></h3>
         </div>
-        <div class="mt-0 mt-md-4">
+        <div>
           <h4><span class="textcolor">*</span><strong>£1000+</strong></h4>
           <h6><em>Or <span class="textcolor">*</span>£200+ a month, over 6 months</em></h6>
           <p class="smalltext textcolor">* depending on website</p>
@@ -256,7 +257,7 @@
             <p><i class="fas fa-pencil-alt mr-2"></i>Unlimited Amends</p>
           </div>
           <div class="col-12">
-            <p><i class="fas fa-coins mr-2"></i><span class="textcolor">*</span>£35 Monthly Upkeep</p>
+            <p>...and more</p>
           </div>
         </div>
         <div>
@@ -279,10 +280,11 @@
   </div> 
 </section>
 
-<section class="websitediv reveal">
-  <div class="container py-5 py-md-2 my-5">
+<section class="alreadydiv reveal">
+  <svg id="wave" class="w-100 d-none d-md-block" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 130" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(213, 232, 234, 1)" offset="0%"></stop><stop stop-color="rgba(232, 240, 241, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,91L80,78C160,65,320,39,480,41.2C640,43,800,74,960,78C1120,82,1280,61,1440,58.5C1600,56,1760,74,1920,86.7C2080,100,2240,108,2400,106.2C2560,104,2720,91,2880,73.7C3040,56,3200,35,3360,32.5C3520,30,3680,48,3840,49.8C4000,52,4160,39,4320,41.2C4480,43,4640,61,4800,73.7C4960,87,5120,95,5280,84.5C5440,74,5600,43,5760,30.3C5920,17,6080,22,6240,32.5C6400,43,6560,61,6720,71.5C6880,82,7040,87,7200,78C7360,69,7520,48,7680,43.3C7840,39,8000,52,8160,58.5C8320,65,8480,65,8640,54.2C8800,43,8960,22,9120,10.8C9280,0,9440,0,9600,8.7C9760,17,9920,35,10080,47.7C10240,61,10400,69,10560,75.8C10720,82,10880,87,11040,84.5C11200,82,11360,74,11440,69.3L11520,65L11520,130L11440,130C11360,130,11200,130,11040,130C10880,130,10720,130,10560,130C10400,130,10240,130,10080,130C9920,130,9760,130,9600,130C9440,130,9280,130,9120,130C8960,130,8800,130,8640,130C8480,130,8320,130,8160,130C8000,130,7840,130,7680,130C7520,130,7360,130,7200,130C7040,130,6880,130,6720,130C6560,130,6400,130,6240,130C6080,130,5920,130,5760,130C5600,130,5440,130,5280,130C5120,130,4960,130,4800,130C4640,130,4480,130,4320,130C4160,130,4000,130,3840,130C3680,130,3520,130,3360,130C3200,130,3040,130,2880,130C2720,130,2560,130,2400,130C2240,130,2080,130,1920,130C1760,130,1600,130,1440,130C1280,130,1120,130,960,130C800,130,640,130,480,130C320,130,160,130,80,130L0,130Z"></path></svg>
+  <div class="container">
     <div class="row m-0">
-      <div class="col-12 p-0 py-1 p-md-5 row mt-1 text-center">
+      <div class="col-12 p-0 py-5 py-md-2 pb-md-5 row mt-1 text-center">
         <h2 class="col-12 mb-4">Already have a website?</h2>
         <div class="col-12">
           <h4 class="mb-4">We can help optimise, streamline or rebuild for you</h4>
